--- a/src/app/components/navbar-vistas/navbar-vistas.component.html
+++ b/src/app/components/navbar-vistas/navbar-vistas.component.html
@@ -29,14 +29,24 @@
             >Usuarios registrados</a
           >
         </li>
-        <!--         <li class="nav-item" *ngIf="this.identidad.rol == 'ADMIN'">
+
+        <li class="nav-item" *ngIf="this.identidad.rol == 'EMPRESA'">
           <a
             class="nav-link"
-            routerLink="/principal/solicitados"
+            routerLink="/empresas/inicio"
             routerLinkActive="active"
-            >Hoteles más solicitados</a
+            >Mis becas</a
           >
-        </li> -->
+        </li>
+
+        <li class="nav-item" *ngIf="this.identidad.rol == 'EMPRESA'">
+          <a
+            class="nav-link"
+            routerLink="/empresas/solicitudes"
+            routerLinkActive="active"
+            >Solicitudes</a
+          >
+        </li>
         <li class="nav-item" *ngIf="this.identidad.rol == 'USUARIO'">
           <a
             class="nav-link"
@@ -45,14 +55,7 @@
             >Inicio</a
           >
         </li>
-        <!--         <li class="nav-item" *ngIf="this.identidad.rol == 'HOTEL'">
-          <a
-            class="nav-link"
-            routerLink="/routerHotel/hoteles"
-            routerLinkActive="active"
-            >Habitaciones de mi hotel</a
-          >
-        </li>
+
         <li class="nav-item" *ngIf="this.identidad.rol == 'HOTEL'">
           <a
             class="nav-link"
@@ -60,7 +63,8 @@
             routerLinkActive="active"
             >Eventos y Servicios</a
           >
-        </li> -->
+        </li>
+        -->
       </ul>
     </div>
     <li class="nav-item dropdown">
@@ -77,12 +81,12 @@
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
         <li>
-          <!--           <a
-            *ngIf="this.identidad.rol == 'HOTEL'"
+          <a
+            *ngIf="this.identidad.rol == 'EMPRESA'"
             class="dropdown-item"
-            [routerLink]="['/routerHotel/editar', this.identidad._id]"
+            [routerLink]="['/empresas/perfil', this.identidad._id]"
             >Editar perfil</a
-          > -->
+          >
           <a
             *ngIf="this.identidad.rol == 'USUARIO'"
             class="dropdown-item"
