--- a/src/app/components/vista-empresa/vista-empresa.component.html
+++ b/src/app/components/vista-empresa/vista-empresa.component.html
@@ -1,2 +1,235 @@
 <app-navbar-vistas></app-navbar-vistas>
-<p>vista-empresa works!</p>
+<div class="banner">
+  <div class="capa"></div>
+  <div class="info">
+    <h1>Bienvenido Administrador de la empresa</h1>
+    <p>
+      El administrador puede ver todos los usuarios registrados, Puede agregar a
+      la base de datos un nuevo hotel y Puede ver la estadística.
+    </p>
+  </div>
+</div>
+
+<section class="intro">
+  <div class="bg-image h-100">
+    <div class="mask d-flex align-items-center h-100">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body">
+                <div class="table-responsive">
+                  <div class="title-cards">
+                    <h2>Control de Becas</h2>
+                  </div>
+
+                  <!--                   <div class="wrap">
+                    <div class="search">
+                      <input [(ngModel)]="search" type="text" class="searchTerm" placeholder="Buscar" />
+                      <button type="submit" class="searchButton">
+                        <i class="fa fa-search"></i>
+                      </button>
+                    </div>
+                  </div> -->
+
+                  <button
+                    id="ap"
+                    type="button"
+                    class="learn-more"
+                    data-bs-toggle="modal"
+                    data-bs-target="#exampleModal"
+                  >
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Agregar beca</span>
+                  </button>
+                  <section class="search-container">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-12 px-4">
+                          <div class="row mt-3">
+                            <div class="col-md-6 align-self-center"></div>
+                            <div class="col-md-6">
+                              <div class="form-inline"></div>
+                            </div>
+                          </div>
+                          <div
+                            class="row search-card-result"
+                            *ngFor="let hoteles of getModelo"
+                          >
+                            <div class="col-md-3">
+                              <img
+                                class="img-fluid"
+                                src="http://placeimg.com/640/640/arch"
+                                alt="Card image cap"
+                              />
+                            </div>
+                            <div class="col-md-5">
+                              <h5>{{ hoteles.nombre }}</h5>
+                              <div class="review">
+                                <span class="fa fa-star checked"></span
+                                ><span class="fa fa-star checked"></span
+                                ><span class="fa fa-star checked"></span
+                                ><span class="fa fa-star"></span
+                                ><span class="fa fa-star"></span>
+                              </div>
+                              <p class="border-top additional">
+                                Descripcion: {{ hoteles.descripcion }}
+                              </p>
+                              <p class="border-top additional">
+                                Vacantes: {{ hoteles.vacantes }}
+                              </p>
+                              <p>
+                                <i class="p-3 fa fa-bath"></i
+                                ><i class="p-3 fa fa-phone"></i
+                                ><i class="p-3 fa fa-wifi"></i
+                                ><i class="p-3 fa fa-tv"></i>
+                              </p>
+                            </div>
+                            <div
+                              class="gy-4 col-md-2 border-left text-center more-offers"
+                            ></div>
+                            <div
+                              class="gy-4 col-md-2 border-left text-center more-offers"
+                            >
+                              <div
+                                [routerLink]="['/empresas/beca', hoteles._id]"
+                                class="btn btn-success"
+                              >
+                                Ver hotel &gt;
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Nueva beca</h5>
+        </div>
+      </div>
+      <div class="modal-body">
+        <form #addForm="ngForm">
+          <div class="row mb-4">
+            <div class="col">
+              <div class="form-outline">
+                <span
+                  *ngIf="!nombre.valid && nombre.touched"
+                  class="requiredField"
+                >
+                  Campo requerido
+                </span>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="nombre"
+                  #nombre="ngModel"
+                  [(ngModel)]="postModelo.nombre"
+                  required
+                />
+                <label class="form-label" for="form3Example1">Nombre</label>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mb-4">
+            <div class="col">
+              <div class="form-outline">
+                <span
+                  *ngIf="!descripcion.valid && descripcion.touched"
+                  class="requiredField"
+                >
+                  Campo requerido
+                </span>
+                <textarea
+                  type="text"
+                  class="form-control"
+                  name="descripcion"
+                  #descripcion="ngModel"
+                  [(ngModel)]="postModelo.descripcion"
+                  required
+                ></textarea>
+                <label class="form-label">Descripcion de la beca</label>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-outline">
+                <span
+                  *ngIf="!requisitos.valid && requisitos.touched"
+                  class="requiredField"
+                >
+                  Campo requerido
+                </span>
+                <textarea
+                  type="text"
+                  class="form-control"
+                  name="requisitos"
+                  #requisitos="ngModel"
+                  [(ngModel)]="postModelo.requisitos"
+                  required
+                ></textarea>
+                <label class="form-label">Requisitos para la beca</label>
+              </div>
+            </div>
+            <div class="row mb-4">
+              <div class="col">
+                <div class="form-outline">
+                  <span
+                    *ngIf="!vacantes.valid && vacantes.touched"
+                    class="requiredField"
+                  >
+                    Campo requerido
+                  </span>
+                  <input
+                    type="number"
+                    class="form-control"
+                    name="vacantes"
+                    #vacantes="ngModel"
+                    [(ngModel)]="postModelo.vacantes"
+                    required
+                  />
+                  <label class="form-label" for="form3Example1">Vacantes</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cancelar
+        </button>
+        <button
+          type="button"
+          data-bs-dismiss="modal"
+          class="btn btn-primary"
+          [disabled]="!addForm.form.valid"
+          (click)="agregarBeca(addForm)"
+        >
+          Agregar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
