--- a/src/app/components/ver-empresa/ver-empresa.component.html
+++ b/src/app/components/ver-empresa/ver-empresa.component.html
@@ -16,13 +16,25 @@
         <div class="col-md-6">
           <div class="profile-head">
             <h5>
-              <span class="font-weight-bold">Modificar Beca</span>
+              <span
+                *ngIf="this.identidad.rol == 'EMPRESA'"
+                class="font-weight-bold"
+                >Modificar Beca</span
+              >
+              <span
+                *ngIf="this.identidad.rol == 'USUARIO'"
+                class="font-weight-bold"
+                >Informacion de beca</span
+              >
             </h5>
-            <h6>Administrador de la empresa</h6>
+            <h6 *ngIf="this.identidad.rol == 'EMPRESA'">
+              Administrador de la empresa
+            </h6>
             <p class="proile-rating">OPCIONES : <span></span></p>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a
+                  *ngIf="this.identidad.rol == 'EMPRESA'"
                   class="nav-link active"
                   id="home-tab"
                   data-toggle="tab"
@@ -46,7 +58,7 @@
               role="tabpanel"
               aria-labelledby="home-tab"
             >
-              <div class="row">
+              <div class="row" *ngIf="this.identidad.rol == 'EMPRESA'">
                 <div class="col-md-5">
                   <label>Nombre</label>
                 </div>
@@ -59,6 +71,30 @@
                   </span>
                   <p>
                     <input
+                      type="text"
+                      class="form-control"
+                      name="nombre"
+                      required="true"
+                      #nombre="ngModel"
+                      [(ngModel)]="getIdModelo.nombre"
+                    />
+                  </p>
+                </div>
+              </div>
+              <div class="row" *ngIf="this.identidad.rol == 'USUARIO'">
+                <div class="col-md-5">
+                  <label>Nombre</label>
+                </div>
+                <div class="col-md-6">
+                  <span
+                    *ngIf="!nombre.valid && nombre.touched"
+                    class="requiredField"
+                  >
+                    Campo requerido
+                  </span>
+                  <p>
+                    <input
+                      readonly="true"
                       type="text"
                       class="form-control"
                       name="nombre"
@@ -82,7 +118,7 @@
                   </span>
                   <p>
                     <input
-                      type="number" 
+                      type="number"
                       class="form-control"
                       name="vacantes"
                       #vacantes="ngModel"
@@ -92,7 +128,7 @@
                   </p>
                 </div>
               </div> -->
-              <div class="row">
+              <div class="row" *ngIf="this.identidad.rol == 'EMPRESA'">
                 <div class="col-md-5">
                   <label>Descripcion</label>
                 </div>
@@ -115,7 +151,31 @@
                   </p>
                 </div>
               </div>
-              <div class="row">
+              <div class="row" *ngIf="this.identidad.rol == 'USUARIO'">
+                <div class="col-md-5">
+                  <label>Descripcion</label>
+                </div>
+                <div class="col-md-6">
+                  <span
+                    *ngIf="!descripcion.valid && descripcion.touched"
+                    class="requiredField"
+                  >
+                    Campo requerido
+                  </span>
+                  <p>
+                    <textarea
+                      readonly
+                      type="number"
+                      class="form-control"
+                      name="vacantes"
+                      #descripcion="ngModel"
+                      required="true"
+                      [(ngModel)]="getIdModelo.descripcion"
+                    ></textarea>
+                  </p>
+                </div>
+              </div>
+              <div class="row" *ngIf="this.identidad.rol == 'EMPRESA'">
                 <div class="col-md-5">
                   <label>Requisitos</label>
                 </div>
@@ -138,9 +198,34 @@
                   </p>
                 </div>
               </div>
+              <div class="row" *ngIf="this.identidad.rol == 'USUARIO'">
+                <div class="col-md-5">
+                  <label>Requisitos</label>
+                </div>
+                <div class="col-md-6">
+                  <span
+                    *ngIf="!requisitos.valid && requisitos.touched"
+                    class="requiredField"
+                  >
+                    Campo requerido
+                  </span>
+                  <p>
+                    <textarea
+                      readonly
+                      type="text"
+                      class="form-control"
+                      name="requisitos"
+                      #requisitos="ngModel"
+                      required="true"
+                      [(ngModel)]="getIdModelo.requisitos"
+                    ></textarea>
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <button
+            *ngIf="this.identidad.rol == 'EMPRESA'"
             [disabled]="!editForm.form.valid"
             id="btnAgregar"
             class="learn-more"
@@ -150,6 +235,17 @@
               <span class="icon arrow"></span>
             </span>
             <span class="button-text">Guardar cambios</span>
+          </button>
+          <button
+            *ngIf="this.identidad.rol == 'USUARIO'"
+            [disabled]="!editForm.form.valid"
+            id="btnAgregar"
+            class="learn-more"
+          >
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Llenar solicitud</span>
           </button>
         </div>
       </div>
