--- a/src/app/components/ver-empresa/ver-empresa.component.html
+++ b/src/app/components/ver-empresa/ver-empresa.component.html
@@ -245,7 +245,11 @@
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
             </span>
-            <span class="button-text">Llenar solicitud</span>
+            <span
+              [routerLink]="['/usuario/solicitar', getIdModelo._id]"
+              class="button-text"
+              >Llenar solicitud</span
+            >
           </button>
         </div>
       </div>
