--- a/src/app/components/formulario/formulario.component.css
+++ b/src/app/components/formulario/formulario.component.css
@@ -1,12 +1,111 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-image: url("./img/adffb142a07755f9fc4e1400e3491ae32.jpg");
-
+  font-family: sans-serif;
 }
 
-body {
-  background-position: center;
-  background-size: cover;
+body{
+  /* background: #757F9A;
+  background: -webkit-linear-gradient(to right, #D7DDE8, #757F9A);
+  background: linear-gradient(to right, #D7DDE8, #757F9A);
+ */}
+
+.container {
+  width: 360px;
+  height: 425px;
+  margin: 7% auto;
+  background:  #fbeee6 ;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: #777;
+}
+
+.container form {
+  width: 280px;
+  position: absolute;
+  top: 100px;
+  left: 40px;
+  transition: 0.5s;
+}
+
+form input {
+  width: 100%;
+  padding: 10px 5px;
+  margin: 5px 0;
+  border: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
+  background: transparent;
+}
+
+::placeholder {
+  color: #777;
+}
+
+.btn-box {
+  width: 100%;
+  margin: 30px auto;
+  text-align: center;
+}
+
+form button {
+  width: 100px;
+  height: 35px;
+  margin: 0 10px;
+  background: linear-gradient(to right, #ff105f, #ffad06);
+  border-radius: 30px;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+}
+
+#form2 {
+  left: 450px;
+}
+
+#form3 {
+  left: 450px;
+}
+
+.step-row {
+  width: 360px;
+  height: 40px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 -1px 5px #000;
+  position: relative;
+}
+
+.step-col {
+  width: 120px;
+  text-align: center;
+  color: #333;
+  position: relative;
+}
+
+#progress {
+  position: absolute;
+  height: 100%;
+  width: 120px;
+  background: linear-gradient(to right, #ff105f, #ffad06);
+  transition: 1s;
+}
+
+#progress::after {
+  content: "";
+  height: 0;
+  width: 0;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  position: absolute;
+  right: -20px;
+  top: 0;
+  border-left: 20px solid #ffad06;
 }
