--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,2 +1,61 @@
-<body></body>f
-dsfasfadsfdw
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+</head>
+
+<body>
+
+  <app-navbar-vistas></app-navbar-vistas>
+
+
+  <div class="container">
+
+
+    <form id="form1">
+      <h3> Create Account</h3>
+      <input type="text" placeholder="Email" required>
+      <input type="text" placeholder="Password" required>
+      <input type="text" placeholder="Confirm Password" required>
+
+      <div class="btn-box">
+        <button type="button" id="next1">Next</button>
+      </div>
+    </form>
+
+    <form id="form2">
+      <h3>Social Media</h3>
+      <input type="text" placeholder="Medium">
+      <input type="text" placeholder="Linkedin">
+      <input type="text" placeholder="Github">
+
+      <div class="btn-box">
+        <button type="button" id="back1">Back</button>
+        <button type="button" id="next2">Next</button>
+      </div>
+    </form>
+
+    <form id="form3">
+      <h3>Personal Info</h3>
+      <input type="text" placeholder="First Name" required>
+      <input type="text" placeholder="Last Name" required>
+      <input type="text" placeholder="Ph#" required>
+
+      <div class="btn-box">
+        <button type="button" id="back2">Back</button>
+        <button type="submit" id="submit">Submit</button>
+      </div>
+    </form>
+
+    <div class="step-row">
+      <div id="progress"></div>
+      <div class="step-col"><small>Step 1</small></div>
+      <div class="step-col"><small>Step 2</small></div>
+      <div class="step-col"><small>Step 3</small></div>
+    </div>
+
+  </div>
+</body>
+
+</html>
